--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- start header -->
     <div class="header">
       <div class="container">
-        <a href="#" class="logo">Elzero</a>
+        <a href="#" class="logo">Template 3</a>
         <ul class="main-nav">
           <li><a href="#articles">Articles</a></li>
           <li><a href="#gallery">Gallery</a></li>
@@ -93,7 +93,7 @@
     <div class="landing">
       <div class="container">
         <div class="text">
-          <h1>Welcome, to elzero World</h1>
+          <h1>Welcome, to Template 3 World</h1>
           <p>
             Iam Gonna share all about my life. Books Iam reading,Games Iam
             playing and Food Im eating
@@ -845,7 +845,7 @@
     <div class="footer">
       <div class="container">
         <div class="box">
-          <h2 class="logo">Elzero</h2>
+          <h2 class="logo">Template 3</h2>
           <div class="social">
             <a href=""><i class="fa-brands fa-youtube"></i></a>
             <a href=""><i class="fa-brands fa-youtube"></i></a>
